objects/Social_Stressor_Survey__c.object
<CustomObject>
    <description>Created for Marketing Cloud Survey</description>
    <fields>
        <fullName>A_close_friend_or_family_member_die__c</fullName>
        <description>Did a close friend or family member die or have a serious illness( other than your spouse or partner)</description>
        <inlineHelpText>Did a close friend or family member die or have a serious illness( other than your spouse or partner)</inlineHelpText>
        <label>SOCSTRESS_v1.0.3</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact Name</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>SOCSTRESSs</relationshipLabel>
        <relationshipName>Social_Stressor_Surveys</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <description>created for marketing cloud.</description>
        <label>Contact</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Did_a_pet_die__c</fullName>
        <description>Did a pet die?</description>
        <inlineHelpText>Did a pet die?</inlineHelpText>
        <label>SOCSTRESS_v1.0.12</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Did_your_spouse_have_a_serious_illness__c</fullName>
        <description>Did your spouse or partner have a serious illness?</description>
        <inlineHelpText>Did your spouse or partner have a serious illness?</inlineHelpText>
        <label>SOCSTRESS_v1.0.2</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Did_your_spouse_or_partner_die__c</fullName>
        <description>Did your spouse or partner die?</description>
        <inlineHelpText>Did your spouse or partner die?</inlineHelpText>
        <label>SOCSTRESS_v1.0.1</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <description>created for marketing cloud survey.</description>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Family_member_have_divorce__c</fullName>
        <description>Did a family member or close friend have a divorce or breakup?</description>
        <inlineHelpText>Did a family member or close friend have a divorce or breakup?</inlineHelpText>
        <label>SOCSTRESS_v1.0.6</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Have_a_divorce_or_breakup_with_spouse__c</fullName>
        <description>Did you have a divorce or breakup with your spouse or partner?</description>
        <inlineHelpText>Did you have a divorce or breakup with your spouse or partner?</inlineHelpText>
        <label>SOCSTRESS_v1.0.5</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Have_a_major_conflict_with_children__c</fullName>
        <description>Did you have a major conflict with children or grandchildren?</description>
        <inlineHelpText>Did you have a major conflict with children or grandchildren?</inlineHelpText>
        <label>SOCSTRESS_v1.0.7</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Have_any_major_accidents__c</fullName>
        <description>Did you have any major accidents,disasters,mugging,unwanted sexual experiences,robberies, similar events</description>
        <inlineHelpText>Did you have any major accidents,disasters,mugging,unwanted sexual experiences,robberies, similar events</inlineHelpText>
        <label>SOCSTRESS_v1.0.8</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Have_any_major_problems_with_money__c</fullName>
        <description>Did you have any major problems with money?</description>
        <inlineHelpText>Did you have any major problems with money?</inlineHelpText>
        <label>SOCSTRESS_v1.0.4</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Were_you_physically_abused__c</fullName>
        <description>Were you physically abused by being hit,slapped,pushed,shoved,punched or threatened with a weapon by a fmily member or close friend?</description>
        <inlineHelpText>Were you physically abused by being hit,slapped,pushed,shoved,punched or threatened with a weapon by a fmily member or close friend?</inlineHelpText>
        <label>SOCSTRESS_v1.0.10</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Were_you_verbally_abused__c</fullName>
        <description>Were you verbally abused by being made fun of,severely criticized,told you were a stupid or worthless person or threatened with harm to yourself,your possessions,or your pets,by a familymember or a close friend?</description>
        <inlineHelpText>Were you verbally abused by being made fun of,severely criticized,told you were a stupid or worthless person or threatened with harm to yourself,your possessions,or your pets,by a familymember or a close friend?</inlineHelpText>
        <label>SOCSTRESS_v1.0.11</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>You_or_family_member_lose_job__c</fullName>
        <description>Did you or a family member or close friend lose their job or retire?</description>
        <inlineHelpText>Did you or a family member or close friend lose their job or retire?</inlineHelpText>
        <label>SOCSTRESS_v1.0.9</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>SOCSTRESS</label>
    <nameField>
        <displayFormat>SOCSTRESS-{0000000000}</displayFormat>
        <label>SOCSTRESS Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SOCSTRESSs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>